update swagger UI
