# server.js
@@ -8,7 +8,7 @@ const port = process.env.PORT || 3000;
 const mongodb = require('./data/database');
 
 
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
+//app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
 app.use(bodyParser.json());
 app.use('/', require('./routes'));
